<resources>
    <string name="app_name">DilatingDotsProgressBar</string>
    <string name="title_activity_main">DilatingDotsProgressBar</string>
    <string name="number_of_dots">Number of Dots</string>
    <string name="radius">Radius:</string>
    <string name="spacing">Spacing:</string>
    <string name="animation_duration">Animation Length:</string>
    <string name="scale_multiplier">Scale Multiplier:</string>
    <string name="color">Color:</string>
    <string name="color_2">Secondary color:</string>
    <string name="appbar_scrolling_view_behavior">scrolling behaviour</string>
</resources>