<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#CFD8DC"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <com.zl.reik.dilatingdotsprogressbar.DilatingDotsProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:radius="5dp"
            android:color="#8C2323"
            />

    </FrameLayout>


    <LinearLayout
        style="@style/SeekbarLayout">

        <TextView
            style="@style/SeekbarLabel"
            android:text="@string/number_of_dots"/>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekbar_number_dots"
            style="@style/Seekbar"
            android:max="6" />

        <TextView
            android:id="@+id/textview_num_dots"
            style="@style/SeekbarValueText" />

    </LinearLayout>

    <LinearLayout
        style="@style/SeekbarLayout">

        <TextView
            style="@style/SeekbarLabel"
            android:text="@string/radius"/>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekbar_radius"
            style="@style/Seekbar"
            android:max="50"/>

        <TextView
            android:id="@+id/textview_radius"
            style="@style/SeekbarValueText"/>

    </LinearLayout>

    <LinearLayout
        style="@style/SeekbarLayout">

        <TextView
            style="@style/SeekbarLabel"
            android:text="@string/spacing"/>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekbar_spacing"
            style="@style/Seekbar"
            android:max="100"/>

        <TextView
            android:id="@+id/textview_spacing"
            style="@style/SeekbarValueText"/>


    </LinearLayout>

    <LinearLayout
        style="@style/SeekbarLayout">

        <TextView
            style="@style/SeekbarLabel"
            android:text="@string/animation_duration"/>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekbar_animation_duration"
            style="@style/Seekbar"
            android:max="1000"/>

        <TextView
            android:id="@+id/textview_animation_duration"
            style="@style/SeekbarValueText"/>

    </LinearLayout>

    <LinearLayout
        style="@style/SeekbarLayout">

        <TextView
            style="@style/SeekbarLabel"
            android:text="@string/scale_multiplier"/>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekbar_scale_multiplier"
            style="@style/Seekbar"
            android:max="100"/>

        <TextView
            android:id="@+id/textview_scale_multiplier"
            style="@style/SeekbarValueText"/>

    </LinearLayout>

    <LinearLayout
        style="@style/SeekbarLayout">

        <TextView
            style="@style/SeekbarLabel"
            android:text="@string/color"/>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekbar_color"
            style="@style/Seekbar"
            android:max="100"/>

        <TextView
            android:id="@+id/textview_color"
            style="@style/SeekbarValueText"/>

    </LinearLayout>

    <LinearLayout
        style="@style/SeekbarLayout">

        <TextView
            style="@style/SeekbarLabel"
            android:text="@string/color_2"/>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekbar_color_2"
            style="@style/Seekbar"
            android:max="255"/>

        <TextView
            android:id="@+id/textview_color_2"
            style="@style/SeekbarValueText"/>

    </LinearLayout>

</LinearLayout>